fix:scroll jumps

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -19,11 +19,13 @@
 html,
 body {
    height: 100%;
-   scroll-behavior: smooth;
+   overflow: hidden;
 }
 
 #__nuxt {
    height: 100%;
    display: flex;
    flex-direction: column;
+   scroll-behavior: smooth;
+   overflow: auto;
 }
